2004-11-05  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gst-platform.c, gst-tool.c: Added archlinux pixmap

2004-11-03  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1

2004-10-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gst-tool.c (gst_tool_directive_free): do not free data, it can be
	reused

2004-10-14  Carlos Garnacho Parro  <carlosg@gnome.org>

        * gst-auth.h: fixed build with -fno-common, patch by Heikki Tauriainen
        <heikki.tauriainen@hut.fi>. Fixes #153062

2004-10-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gst-tool.c: do not use the tool if the refcount is 0

2004-09-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.0

2004-09-01  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 0.92

2004-08-29  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gst-auth.c, gst-tool.c: fixed some memleaks

2004-08-24  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gst-platform.c, gst-tool.c: various leaks fixed

2004-08-24  Joe Marcus Clarke  <marcus@freebsd.org>

	* gst-auth.c: fixes for calling correctly the backend both in Linux
	and FreeBSD (using env, not export). Fixes #150693

2004-08-20  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.91.0

2004-08-20  Carlos Garnacho Parro  <carlos@gnome.org>

	* gst-platform.c, gst-tool.c: Added support for Specifix Linux pixmaps

2004-08-20  Daisuke SUZUKI  <daisuke@linux.or.jp>

	* gst-platform.c, gst-tool.c: Added support for Vine Linux 3.0 and 3.1

2004-08-02  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gst-auth.[ch]: made it to search first to the su/ssh output for
	guessing whether it needs password or not. Fixes #147362

2004-07-19  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.90

2004-07-19  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* gst-tool.c: removed fatal warning, I think that the tools are quite
	  stable already

2004-07-19  Carlos Garnacho Parro  <garnacho@tuxerver.net>
